fixed broken link.
2004-03-28  Sven Neumann  <sven@gimp.org>

	* source/howtos/stable-cvs-get.htrw: fixed broken link.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
+	* source/howtos/stable-cvs-get.htrw: fixed broken link.
+
 2004-03-27  Raphaël Quinet  <quinet@gamers.org>
 
 	* about/selling.htrw: Added link to "Selling Free Software" as
