--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
+	* unix/index.htrw: added link to SuSE RPMs.
+
 	* source/howtos/stable-cvs-get.htrw: fixed broken link.
 
 2004-03-27  Raphaël Quinet  <quinet@gamers.org>
