--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
+	* docs/index.htrw: link to the GimpDocs page on the wiki until we
+	have something about gimp-help on www.gimp.org.
+
+	* admin/gimp-web-urls: added wiki:GimpDocs
+
+2004-03-28  Sven Neumann  <sven@gimp.org>
+
 	* source/index.htrw: added MD5 sums of the 2.0.0 release tarballs.
 	Perhaps this should be moved to a different place, but I wanted to
 	see it online somewhere. Please feel free to improve.
