--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-28  Sven Neumann  <sven@gimp.org>
 
+	* source/index.htrw: fixed anchor.
+
 	* unix/index.htrw: fixed brokeness I introduced earlier today.
 
 	* docs/index.htrw: link to the GimpDocs page on the wiki until we
