--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-29  Sven Neumann  <sven@gimp.org>
 
+	* unix/index.htrw: added link to debian packages (bug #138399).
+
+2004-03-29  Sven Neumann  <sven@gimp.org>
+
 	* macintosh/index.htrw: fixed information about DarwinPorts (there
 	are no binary packages yet), removed names of OpenDarwin project
 	leaders and added the name of the gimp2 portfile maintainer
