added links in the Configuration section. These links point to the pages
2004-03-29  Sven Neumann  <sven@gimp.org>

	* windows/index.htrw: added links in the Configuration section.
	These links point to the pages in the Unix section but
	configuration is not really platform-dependant and should probably
	be moved elsewhere.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-29  Sven Neumann  <sven@gimp.org>
 
+	* windows/index.htrw: added links in the Configuration section.
+	These links point to the pages in the Unix section but
+	configuration is not really platform-dependant and should probably
+	be moved elsewhere.
+
+2004-03-29  Sven Neumann  <sven@gimp.org>
+
 	* unix/index.htrw: added link to debian packages (bug #138399).
 
 2004-03-29  Sven Neumann  <sven@gimp.org>
