--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-30  Henrik Brix Andersen  <brix@gimp.org>
+
+	* about/.cvsignore
+	* programmatic/.cvsignore: shut up CVS
+
 2004-03-30  Sven Neumann  <sven@gimp.org>
 
 	* admin/gimp-web-urls: added wgo:docs.
