--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-31  Niklas M <scizzo@gimp.org>
+
+	* unix/index.htrw: Added link to gentoo-portage for gentoo users.
+
 2004-03-31  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: fixed typo spotted by Kevin Cozens.
