--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: added link to gimp in debian unstable.
+
 2004-03-31  Niklas M <scizzo@gimp.org>
 
 	* source/index.htrw: Changed the anchors for the headlines so that
