--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-02  Ville Pätsi  <drc@gimp.org>
+
+	* unix/index.htrw: Removed link to xach.com on owners request.
+
 2004-04-02  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: added link to gimp in debian unstable.
