--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-02  Sven Neumann  <sven@gimp.org>
+
+	* macintosh/index.htrw: removed link to osxgnu.org because the
+	gimp offered there is outdated. Added link to openosx.com.
+
 2004-04-02  Ville Pätsi  <drc@gimp.org>
 
 	* unix/index.htrw: Removed link to xach.com on owners request.
