--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-05  Raphaël Quinet  <quinet@gamers.org>
+
+	* bugs/index.htrw: Replaced "&" in hrefs by "&amp;" in order to
+	get valid [X]HTML.  Changed link to minor GIMP bugs to also
+	include trivial bugs, which were missing from the list.
+
 2004-04-02  Sven Neumann  <sven@gimp.org>
 
 	* macintosh/index.htrw: after some investigation on the web,
