--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-09  Henrik Brix Andersen  <brix@gimp.org>
+
+	* windows/index.htrw: removed spurious '2' char. Fixes bug
+	#139577.
+
 2004-04-07  Raphaël Quinet  <quinet@gamers.org>
 
 	* windows/index.htrw: The external browser option for the help
