--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-04-10  Sven Neumann  <sven@gimp.org>
 
-	* nopatents.html: declare the html namespace.
+	* nopatents.html: declare the html namespace; moved the comments
+	into the <html> document.
 
 2004-04-10  Raphaël Quinet  <quinet@gamers.org>
 
