--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-12  Henrik Brix Andersen  <brix@gimp.org>
+
+	* admin/gimp-web-urls: removed extra http:// from
+	tutorial:Custom_Brushes-Lad_Gautam_N spotted by Roman Frolow.
+
 2004-04-10  Sven Neumann  <sven@gimp.org>
 
 	* nopatents.html: declare the html namespace; moved the comments
