--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-14  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.1 release. Moved the MD5
+	sums here ...
+
+	* source/index.htrw: ... and removed them here.
+
 2004-04-12  Henrik Brix Andersen  <brix@gimp.org>
 
 	* admin/gimp-web-urls: removed extra http:// from
