--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-19  Raphaël Quinet  <quinet@gamers.org>
+
+	* nopatents.html: Removed (the online protest is over).
+
 2004-04-18  Niklas M <scizzo@gimp.org>
 
 	* unix/index.htrw: Made a start of a BSD list and added the freebsd ports
