Removed screenshot of my son following a comment that it was inappropriate
2004-04-21  Dave Neary  <bolsh@gimp.org>

        * screenshots: Removed screenshot of my son following a comment
        that it was inappropriate (which I can understand).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-21  Dave Neary  <bolsh@gimp.org>
+
+	* screenshots: Removed screenshot of my son following a comment 
+	that it was inappropriate (which I can understand).
+
 2004-04-19  Raphaël Quinet  <quinet@gamers.org>
 
 	* nopatents.html: Removed (the online protest is over).
