--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-05-15  Henrik Brix Andersen  <brix@gimp.org>
+
+	* donating/.cvsignore
+	* donating/index.htrw: added page with instructions for donating
+	to the GIMP
+
+	* admin/gimp-web-urls: added link to the GUADEC site
+
+	* includes/wgo-howto-bugs-init.xhtml
+	* includes/wgo-howto-source-init.xhtml
+	* includes/wgo-howto-unix-init.xhtml
+	* includes/wgo-page-init.xhtml
+	* includes/wgo-tutorial-init.xhtml: added link to the new
+	donations page
+
 2004-05-10  Henrik Brix Andersen  <brix@gimp.org>
 
 	* unix/index.htrw: removed the links to xach.com again since we
