--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-15  Sven Neumann  <sven@gimp.org>
+
+	* donating/index.htrw: rephrased a sentence.
+
 2004-05-15  Henrik Brix Andersen  <brix@gimp.org>
 
 	* links/index.htrw: added links to gimp.ru, linuxartist.org
