--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-22  Henrik Brix Andersen  <brix@gimp.org>
 
+	* donating/index.htrw: fixed the xhtml so that it validates,
+	spotted by schumaml in #gimp.
+
+2004-05-22  Henrik Brix Andersen  <brix@gimp.org>
+
 	* style/wgo.css
 	* donating/index.htrw: argh - putting the form in an image
 	paragraph wont help much. Added a CSS style to indent the form
