added link to the development version.
2004-06-03  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: added link to the development version.

	* source/index.htrw: just some indenting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-03  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: added link to the development version.
+
+	* source/index.htrw: just some indenting.
+
 2004-05-29  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* programmatic/tools/rewrite_attrs.py: code and feature improvements.
@@ -10,8 +16,8 @@
 	* admin/gimp-web-urls: Added vidar madsen to the list of people.
 	  Changed address to my website.
 	
-	* tutorials/Sketch_Effect/: Added this tutorial provided by Vidar. Closes
-	bug #142766. Not validated yet.
+	* tutorials/Sketch_Effect/: Added this tutorial provided by
+	Vidar. Closes bug #142766. Not validated yet.
 
 	* tutorials/index.htrw: Added vidars tutorial to the list of tutorials.
 
