--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.2 release.
+
 2004-06-03  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: added link to the development version.
@@ -9,7 +13,6 @@
 	* programmatic/tools/rewrite_attrs.py: code and feature improvements.
 
 	* archive.htrw: incipient mechanism to view archived news
-	
 
 2004-05-22  Niklas M <scizzo@gimp.org>
 
@@ -124,8 +127,8 @@
 
 2004-04-18  Niklas M <scizzo@gimp.org>
 
-	* unix/index.htrw: Made a start of a BSD list and added the freebsd ports
-	links to the list.
+	* unix/index.htrw: Made a start of a BSD list and added the
+	freebsd ports links to the list.
 
 2004-04-14  Sven Neumann  <sven@gimp.org>
 
