--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-17  Sven Neumann  <sven@gimp.org>
+
+	* macintosh/index.htrw: link to the gimp2 fink package description
+	and removed the useless statement that fink is hosted on sourceforge.
+
 2004-06-15  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.0.2 release.
