--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.1.1.
+
 2004-06-17  Sven Neumann  <sven@gimp.org>
 
 	* macintosh/index.htrw: link to the gimp2 fink package description
