--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-01  Henrik Brix Andersen  <brix@gimp.org>
+
+	* mail_lists.htrw
+	* admin/gimp-web-urls: added link to the new gimp-docs mailing
+	list.
+
 2004-06-24  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.1.1.
