--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-17  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.3 release.
+
 2004-07-01  Henrik Brix Andersen  <brix@gimp.org>
 
 	* mail_lists.htrw
