--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-18  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: updated links to GIMP binaries for Linux.
+
 2004-07-17  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.0.3 release.
