--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-20  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.1.2.
+
 2004-07-18  Sven Neumann  <sven@gimp.org>
 
 	* unix/index.htrw: updated links to GIMP binaries for Linux.
