--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-25  Niklas M <scizzo@gimp.org>
+
+	* /INSTALL: Added this file to help with installing the website.
+
 2004-07-25  Raphaël Quinet  <quinet@gamers.org>
 
 	* tutorials/Basic_Scheme2/index.htrw: Updated some broken links
