updated for 2.0.4 release.
2004-08-06  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.0.4 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.4 release.
+
 2004-07-26  Niklas M <scizzo@gimp.org>
 
 	* /admin/gimp-web-urls: Added documentation links for the languages.
