--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw: updated for 2.1.3 release.
+	
+2004-08-06  Sven Neumann  <sven@gimp.org>
+
 	* downloads/index.htrw: updated for 2.0.4 release.
 
 2004-07-26  Niklas M <scizzo@gimp.org>
