--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-06  Niklas M <scizzo@gimp.org>
+
+	* docs/index.htrw: Changed the name of "The GIMP Documentation" to "The GIMP
+	User Manual".
+
 2004-08-06  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.1.3 release.
