--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-27  Raphaël Quinet  <quinet@gamers.org>
+
+	* docs/index.htrw: 
+	* admin/gimp-web-urls: Added a link to the Chinese version of the
+	GIMP user manual.
+
 2004-08-23  Raphaël Quinet  <quinet@gamers.org>
 
 	* downloads/index.htrw: Added a link to the contact page at the
