--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-29  Sven Neumann  <sven@gimp.org>
 
+	* unix/index.htrw: mention dependencies for compiling GIMP 2.1.
+
+2004-08-29  Sven Neumann  <sven@gimp.org>
+
 	* unix/index.htrw: gimp-2.0 is finally available in debian testing.
 
 2004-08-27  Raphaël Quinet  <quinet@gamers.org>
