updated for 2.1.3 release.
2004-09-05  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.1.3 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-05  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.1.4 release.
+
 2004-09-01  Raphaël Quinet  <quinet@gamers.org>
 
 	* admin/gimp-web-urls,
