--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-25  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.5 release.
+
 2004-09-20  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.1.5 release.
