--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-05  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.1.6 release.
+
 2004-09-25  Sven Neumann  <sven@gimp.org>
 
 	* develop/index.htrw: don't encourage selling GIMP too much.
