updated for 2.1.7 release.
2004-10-15  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.1.7 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-15  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.1.7 release.
+
 2004-10-11  Niklas M <scizzo@gimp.org>
 
 	* windows/index.htrw: Fixed the download link for win installers.
