mention the 2.2-pre1 release here at least.
2004-11-01  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: mention the 2.2-pre1 release here at least.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-01  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: mention the 2.2-pre1 release here at least.
+
 2004-10-15  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.1.7 release.
