updated for 2.0.6 release.
2004-11-02  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.0.6 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-02  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.0.6 release.
+
 2004-11-01  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: mention the 2.2-pre1 release here at least.
