--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-03  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: updated link to SuSE RPMs.
+
 2004-11-02  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.0.6 release.
