added a teaser for 2.2.
2004-11-03  Sven Neumann  <sven@gimp.org>

	* about/splash/stable.htrw: added a teaser for 2.2.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-03  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/stable.htrw: added a teaser for 2.2.
+
 	* about/splash/index.htrw: some smaller cleanups and a note about
 	splash screens and GIMP 2.2.
 
