--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-05  Sven Neumann  <sven@gimp.org>
+
+	* about/splash/splash-images/splash-2.1.htrw: some fixes.
+
 2004-11-05  Niklas M <scizzo@gimp.org>
 
 	* downloads/install_help.html: Updated with 2.2 requirements.
