--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-05  Niklas M <scizzo@gimp.org>
+
+	* source/index.htrw: Added requirements for 2.2.
+
 2004-11-05  Sven Neumann  <sven@gimp.org>
 
 	* about/splash/index.htrw
