--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-20  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2-pre2.
+
 2004-11-18  Dave Neary  <bolsh@gimp.org>
 
 	* about/selling.htrw
