--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-20  Sven Neumann  <sven@gimp.org>
 
+	* windows/index.htrw: removed reference to GIMP 1.2.
+
+2004-11-20  Sven Neumann  <sven@gimp.org>
+
 	* source/index.htrw: mention 2.2 in the requirements list.
 
 2004-11-20  Sven Neumann  <sven@gimp.org>
