added news about GIMP at 21C3.
2004-11-24  Sven Neumann  <sven@gimp.org>

	* index.htrw: added news about GIMP at 21C3.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-24  Sven Neumann  <sven@gimp.org>
+
+	* index.htrw: added news about GIMP at 21C3.
+
 2004-11-20  Sven Neumann  <sven@gimp.org>
 
 	* windows/index.htrw: removed reference to GIMP 1.2.
