Announce the splash screen contest.
2004-11-29  Dave Neary  <bolsh@gimp.org>

        * index.htrw: Announce the splash screen contest.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-29  Dave Neary  <bolsh@gimp.org>
+
+	* index.htrw: Announce the splash screen contest.
+
 2004-11-25  Dave Neary  <bolsh@gimp.org>
 
 	* donating/index.htrw: Remove c/o Novell from GNOME
