added a link to the splash archive

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-11-29  Sven Neumann  <sven@gimp.org>
 
-	* index.htrw: put the splash screen context back up but w/o
+	* index.htrw: put the splash screen contest back up but w/o
 	submission info for now.
 
 2004-11-29  Sven Neumann  <sven@gimp.org>
